Fixed minor z-index issues for code annotations

--- a/src/assets/stylesheets/main/extensions/pymdownx/_tabbed.scss
+++ b/src/assets/stylesheets/main/extensions/pymdownx/_tabbed.scss
@@ -94,7 +94,6 @@
 
     // Tab label
     > label {
-      z-index: 1;
       flex-shrink: 0;
       width: auto;
       padding: px2em(10px, 12.8px) 1.25em px2em(8px, 12.8px);
