--- a/src/assets/stylesheets/main/layout/_tooltip.scss
+++ b/src/assets/stylesheets/main/layout/_tooltip.scss
@@ -60,6 +60,9 @@
       calc(var(--md-tooltip-x) - #{px2rem(16px)}),
       calc(100vw - var(--md-tooltip-width) - #{px2rem(16px)})
     );
+  // Hack: set an explicit `z-index` so we can transition it to ensure that any
+  // following elements are not overlaying the tooltip during the transition.
+  z-index: 0;
   width: var(--md-tooltip-width);
   max-width: calc(100vw - 2 * #{px2rem(16px)});
   max-height: 0;
@@ -74,7 +77,8 @@
   transition:
     transform    0ms 250ms,
     opacity    250ms,
-    max-height   0ms 250ms;
+    max-height   0ms 250ms,
+    z-index    250ms;
 
   // [reduced-motion]: Disable animation
   @media (prefers-reduced-motion) {
@@ -89,7 +93,8 @@
     transition:
       transform  250ms cubic-bezier(0.1, 0.7, 0.1, 1),
       opacity    250ms,
-      max-height 250ms;
+      max-height 250ms,
+      z-index      0ms;
 
     // [reduced-motion]: Disable animation
     @media (prefers-reduced-motion) {
@@ -175,6 +180,7 @@
     margin: 0 1ch;
     color: hsla(0, 0%, 100%, 1);
     cursor: pointer;
+    transition: z-index 250ms;
     user-select: none;
 
     // Code annotation index bubble – the bubble must be positioned absolutely
@@ -230,6 +236,7 @@
 
     // Code annotation index on focus
     :focus-within > & {
+      transition: none;
       animation: none;
     }
   }
